// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`worker start should emit update event after each batch is processed 1`] = `
Array [
  Array [
    "update",
    Object {
      "status": "inProgress",
    },
  ],
  Array [
    "update",
    Object {
      "status": "inProgress",
    },
  ],
  Array [
    "update",
    Object {
      "status": "completed",
    },
  ],
  Array [
    "done",
  ],
]
`;

exports[`worker start should process documents in the search in batches and emit event when done 1`] = `
Array [
  Array [
    "search",
    5,
  ],
  Array [
    "search",
    5,
  ],
  Array [
    "search",
    5,
  ],
]
`;

exports[`worker start should stop processing when search status is stopped and emit stopped event 1`] = `
Array [
  Array [
    "update",
    Object {
      "status": "inProgress",
    },
  ],
  Array [
    "update",
    Object {
      "status": "stopped",
    },
  ],
  Array [
    "stopped",
  ],
]
`;
